gccida/g3/e24toe
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/e24toe/src/real.c:3986:12: error: expected expression
*( _OWORD *)&v11[1] = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/e24toe/src/real.c:3986:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v11[1] = 0LL; 
   ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/e24toe/src/obj/real.o] Error 1
